# axonctl

./: .gitignore  404.html  CHANGELOG.md  CHANGELOG.ru.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  README.ru.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
PROTOCOL/: index.html
actions/: index.html
api/: index.html
architecture/: index.html
concepts/: index.html
configuration/: index.html
cookbook/: index.html
docs/: PROTOCOL.md  PROTOCOL.ru.md  actions.md  actions.ru.md  api.md  architecture.md  architecture.ru.md  concepts.md  concepts.ru.md  configuration.md  configuration.ru.md  cookbook.md  cookbook.ru.md  errors.md  errors.ru.md  fleet.md  fleet.ru.md  index.md  index.ru.md  inspector.md  inspector.ru.md  installation.md  installation.ru.md  quickstart.md  quickstart.ru.md  scenarios.md  scenarios.ru.md  screenshots.md  screenshots.ru.md  selectors.md  selectors.ru.md  tree.md  tree.ru.md  troubleshooting.md  troubleshooting.ru.md  waiting.md  waiting.ru.md  windows.md  windows.ru.md
errors/: index.html
examples/: README.md  README.ru.md  fleet.toml  inspect_screen.py  inspect_ui.py  run_group.py  single_device.py
fleet/: index.html
inspector/: index.html
installation/: index.html
quickstart/: index.html
ru/: index.html
ru/PROTOCOL/: index.html
ru/actions/: index.html
ru/api/: index.html
ru/architecture/: index.html
ru/concepts/: index.html
ru/configuration/: index.html
ru/cookbook/: index.html
ru/errors/: index.html
ru/fleet/: index.html
ru/inspector/: index.html
ru/installation/: index.html
ru/quickstart/: index.html
ru/scenarios/: index.html
ru/screenshots/: index.html
ru/selectors/: index.html
ru/tree/: index.html
ru/troubleshooting/: index.html
ru/waiting/: index.html
ru/windows/: index.html
scenarios/: index.html
screenshots/: index.html
scripts/: bootstrap.sh  install-adb.sh  install-uv.sh  setup-venv.sh
search/: search_index.json
selectors/: index.html
src/axonctl/: __init__.py  config.py  device.py  gestures.py  inspect.py  retry.py  wait.py
src/axonctl/conn/: __init__.py  connection.py  reconnect.py  router.py  ws.py
src/axonctl/events/: __init__.py  bus.py  state.py
src/axonctl/fleet/: __init__.py  adb.py  controller.py  executor.py  groups.py  ports.py  watcher.py
src/axonctl/rpc/: __init__.py  client.py  errors.py  ids.py  pending.py
src/axonctl/tree/: __init__.py  geom.py  node.py  selector.py  tree.py  window.py
tests/: conftest.py
tests/integration/: fake_agent.py  test_actions.py  test_executor.py  test_fleet.py  test_inspect_device.py  test_queries.py  test_robustness.py  test_transport.py  test_waits.py
tests/unit/: test_ascii_protocol.py  test_config.py  test_errors.py  test_events.py  test_gestures.py  test_groups.py  test_ids.py  test_inspect.py  test_node_nav.py  test_pending.py  test_ports.py  test_reconnect.py  test_retry.py  test_router.py  test_selector.py  test_smoke.py  test_tree.py  test_window.py
tree/: index.html
troubleshooting/: index.html
waiting/: index.html
windows/: index.html
